# Polymarket-Sniper-Bot

./: .dockerignore  .env.example  .gitignore  ALTERNATING_FAILURES.md  APEX_V3_ANALYSIS.md  APEX_V3_FIXES.md  APEX_V3_INTEGRATION.md  APEX_V3_OUTPUT.md  APEX_V3_STATUS.md  AUTHENTICATION_FIX.md  AUTH_ANALYSIS_FINDINGS.md  AUTH_BALANCE_FIX.md  AUTH_DIAGNOSTICS_USER_GUIDE.md  AUTH_DIAGNOSTIC_INDEX.md  AUTH_DIAGNOSTIC_PLAN.md  AUTH_DIAGNOSTIC_SUMMARY.md  AUTH_FAILURE_DIAGNOSTIC_REPORT.md  AUTH_FIX_2025_01_19.md  AUTH_GAS_WASTE_ANALYSIS.md  AUTH_STORY.json  AUTH_STORY_DIAGNOSTIC.json  AUTH_STORY_DIAGNOSTIC.md  AUTH_STORY_DIAGRAM.txt  AUTH_STORY_EXAMPLE.md  AUTH_STORY_FIX.md  AUTH_STORY_FLOW.txt  AUTH_STORY_ONE_LINE.txt  AUTH_STORY_SAFE_PROXY_FIX.md  AUTH_STORY_SUMMARY.md  BEFORE_AFTER_EXAMPLE.md  BREAKING_CHANGES.md  BUGFIX_SUMMARY.md  CHANGES_SUMMARY.md  CLOB_AUTH_AUTO_DETECTION.md  CLOB_AUTH_FIX_SUMMARY.md  CLOUDFLARE_403_DIAGNOSTIC_GUIDE.md  CLOUDFLARE_403_RESPONSE.md  CLOUDFLARE_LOGGING_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  COMMIT_HISTORY.md  (+76 more)
docs/: ALLOWANCE_COOLDOWN_FIX.md  AUTH_DIAGNOSTICS.md  AUTH_DIAGNOSTICS_SUMMARY.md  AUTH_LOGGING_GUIDE.md  AUTH_TRADING_ADDRESS_DIAGNOSTIC.md  AUTH_TROUBLESHOOTING.md  AUTOREDEEM_ARCHITECTURE.md  AUTO_REDEEM.md  CLOBCLIENT_WORKAROUND.md  CLOB_AUTH_DEBUGGING.md  CREDENTIALS_EXPLAINED.md  EMERGENCY_SELLS.md  ENTERPRISE_TRADING.md  ENVIRONMENT_VARIABLES.md  ERROR_REPORTING.md  ERROR_REPORTING_INTEGRATION.md  EXECUTION_MAP.md  GETTING_STARTED.md  GUIDE.md  ORDER_SYSTEM.md  (+9 more)
rust-clob-bridge/: Cargo.toml
rust-clob-bridge/src/: main.rs
(+606 files in other folders)
